--- a/osu.iOS.props
+++ b/osu.iOS.props
@@ -16,7 +16,6 @@
     <UseInterpreter>false</UseInterpreter>
     <MtouchInterpreter>-all</MtouchInterpreter>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="ppy.osu.Framework.iOS" Version="2024.916.0" />
-  </ItemGroup>
+  <Import Project="$(MSBuildThisFileDirectory)../osu-framework-loongarch/osu.Framework.iOS.props"/>
+
 </Project>
